--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 .navbar{
   float:right;
 } //상단 네비게이션 바 라고 많이 부름
+
+.navitem{
+  text-decoration: none;
+  color:black;
+} //텍스트 밑줄 지워줄떄 쓰임 !
+//글자 색 검정색으로 변경
