--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .navbar{
-  float:right;
+  float:right;  
   border:1px solid red;//영역
   margin:20px;
 } //상단 네비게이션 바 라고 많이 부름
@@ -19,3 +19,16 @@
 .main{
   margin-top:300px;
 }
+
+
+//display:block (HTML default(고유)속성값)
+//dispaly - html태그를 어떤규칙으로 배열을 할거냐
+//block 태그들을 수직으로 배열을 함 
+//flex 수평 배열(옆으로 배열)
+//inline :모든 요소 한줄에 
+
+//element.style{
+display: block
+}
+
+//요소들을 놓는 규칙 display
