--- a/style.css
+++ b/style.css
@@ -1,26 +1,66 @@
 body{
-  dispaly:contents;
+  display: contents;
 }
 
 .navbar{
-  float:right;  
-  border:1px solid red;//영역
-  margin:20px;
-} //상단 네비게이션 바 라고 많이 부름
+  float: right;
+  margin: 20px;
+}
 
 .nav-item{
   text-decoration: none;
   color: black;
   margin-right: 15px;
-} 
-} //텍스트 밑줄 지워줄떄 쓰임 !
-//글자 색 검정색으로 변경
+}
 
 .nav-item:hover{
   text-decoration: underline;
 }
 
 .main{
-  margin-top:300px;
+  margin-top: 300px;
+  text-align: center;
 }
 
+.input-area{
+  margin-top: 20px;
+}
+
+.input-box{
+  width: 561px;
+  height: 44px;
+  border-radius: 24px;
+  padding-left: 50px;
+  padding-right: 40px;
+  border: 1px solid #dfe1e5
+}
+
+.search-icon{
+  position: relative;
+  left: 40px;
+  height: 24px;
+  width: 24px;
+  color: #9aa0a6;
+}
+
+.mic-icon{
+  position: relative;
+  right: 40px;
+  height: 24px;
+  width: 24px;
+  color: #9aa0a6;
+}
+
+.button-area{
+  padding-top: 18px;
+}
+
+.button-style{
+  height: 36px;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  font-family: arial, sans-serif;
+  border-radius: 4px;
+  padding: 0 16px;
+  margin: 11px 9px
+}
