버튼 효과 학인 하느법

--- a/style.css
+++ b/style.css
@@ -64,3 +64,6 @@ body{
   padding: 0 16px; //패딩 값 1개,2개,4개, 1개 : 네방향이 같은 것, 2개 가로방향 위아래, 세로방향 오왼
   margin: 11px 9px
 }
+
+//hover이벤트 확인하는 법 - 커서 활용해서 버튼을 클릭한 후 , 우 클릭하면 , focus state 누르면 이벤트 종류대로 나옴 - hover선택 - hover일때의 스타일이 아래에 쭉 뜸 스타일 참고 하면 됨 .
+// box-shadow등등 스타일 전체 복사해오면 됨 
